professional Chinese translation

--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -1,12 +1,23 @@
 {
   "language": "defecto",
   "texts": {
+    "Sales report": "Reporte de ventas",
+    "Top products": "Los mejores productos",
+    "Customers": "Clientes",
+    "Custom": "Costumbre",
+    "Product list": "Lista de productos",
+    "Orders": "Pedidos",
+    "Settings": "Ajustes",
+    "Analytics": "Analítica",
+    "New order": "Nuevo orden",
     "All": "Todos",
     "New": "Nuevo",
+    "Paid": "Pagado",
     "Processing": "Procesando",
     "Completed": "Terminado",
     "Canceled": "Cancelado",
     "Failed": "Ha fallado",
+    "Refunded": "Reintegrado",
     "Search order": "Orden de búsqueda",
     "From": "Desde",
     "Status": "Estado",
@@ -30,11 +41,10 @@
     "Add product": "Agregar producto",
     "Save changes": "Guardar cambios",
     "Notifications": "Notificaciones",
-    "Currency": "Divisa",
+    "Currency &amp; Tax": "Moneda y amp; Impuesto",
     "Payout": "Pagar",
-    "Tax": "Impuesto",
+    "Legal": "Legal",
     "Notification settings": "Configuración de las notificaciones",
-    "New order": "Nuevo orden",
     "None": "Ninguna",
     "Client": "Cliente",
     "Administrator": "Administrador",
@@ -44,12 +54,26 @@
     "Processing order": "Orden de procesamiento",
     "Refunded order": "pedido reembolsado",
     "Currency settings": "Configuración de moneda",
+    "Currency": "Divisa",
     "Currency symbol": "Símbolo de moneda",
     "Currency position": "Posición de moneda",
     "Left": "Izquierda",
     "Right": "Derecha",
     "Left with space": "Dejado con espacio",
     "Right with space": "Justo con el espacio",
+    "Tax": "Impuesto",
+    "Calculate": "Calcular",
+    "Enable tax calculations when processing orders.": "Habilite los cálculos de impuestos al procesar pedidos.",
+    "Geolocation": "Geolocalización",
+    "Auto tax rate": "Tasa de impuesto automático",
+    "Automatically detect tax rate whenever applicable.": "Detecta automáticamente la tasa de impuestos cuando corresponda.",
+    "Rate": "Velocidad",
+    "Default tax rate. Example, 9 or 21. Use numeric value.": "Tasa impositiva predeterminada. Ejemplo, 9 o 21. Utilice un valor numérico.",
+    "Display": "Mostrar",
+    "Tax title. Example, VAT or GST.": "Título fiscal. Ejemplo, IVA o GST.",
+    "Invoice and receipts": "Factura y recibos",
+    "Receipts": "Ingresos",
+    "Invoice receipt design for printers.": "Diseño de recibo de factura para imprentas.",
     "Your tax informatio": "Tu información fiscal",
     "Invoice info (this information will be not revealed public)": "Información de la factura (esta información no se revelará públicamente)",
     "Tax ID": "Identificación del impuesto",
@@ -73,7 +97,6 @@
     "Bank name": "Nombre del banco",
     "Bank branch city": "Ciudad sucursal bancaria",
     "Bank branch country": "País de la sucursal bancaria",
-    "Showing %1$ to %2$ of %3$ entries": "Mostrando %1$ a %2$ de %3$ entradas",
     "no records to display": "No hay registros que mostrar",
     "Unpublished": "Inédito",
     "Drafts": "Borradores",
@@ -89,16 +112,60 @@
     "Oct": "Oct",
     "Nov": "Nov",
     "Dec": "Dic",
-    "Dashboard": "Panel",
-    "E-commerce": "comercio electrónico",
-    "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "Copyright © %1$ %2$ Kenzap%3$. Reservados todos los derechos.",
-    "Kenzap Cloud Services - Dashboard": "Servicios en la nube de Kenzap - Panel de control",
-    "No orders to display.": "No hay pedidos para mostrar.",
-    "Orders": "Pedidos",
+    "required": "requerido",
+    "Showing %1$ to %2$ of %3$ entries": "Mostrando %1$ a %2$ de %3$ entradas",
+    "Create": "Crear",
     "Update": "Actualizar",
     "Close": "Cerrar",
+    "Product": "Producto",
+    "Qty": "Cantidad",
+    "Search..": "Búsqueda..",
+    "Add note": "Añadir la nota",
+    "Add variation": "Agregar variación",
+    "Adjust price": "Precio ajustado",
+    "Remove": "Remover",
+    "Note": "Nota",
+    "Incorrect product data": "Datos de producto incorrectos",
+    "ID": "IDENTIFICACIÓN",
+    "Name": "Nombre",
+    "Surname": "Apellido",
+    "Bios": "biografías",
+    "Avatar": "Avatar",
+    "Post": "Correo",
+    "Whatsapp": "Whatsapp",
+    "Messenger": "Mensajero",
+    "Line": "Línea",
+    "Telegram": "Telegrama",
+    "Bio": "biografía",
+    "IBAN": "IBAN",
+    "SWIFT": "RÁPIDO",
+    "Bank": "Banco",
+    "Bank city": "Ciudad bancaria",
+    "Bank country": "país del banco",
+    "Amount Payable": "Cantidad pagable",
+    "Link 3": "Enlace 3",
+    "Grade": "Grado",
+    "Kenzap IDA": "AIF de Kenzap",
+    "Printing j": "Impresión j",
+    "Dashboard": "Panel",
+    "E-commerce": "comercio electrónico",
+    "Today": "Hoy dia",
+    "day": "día",
+    "days": "dias",
+    "Total tax": "Total impuestos",
+    "Total with tax": "total con impuestos",
+    "No data to display": "no hay información para mostrar",
+    "Totals": "Totales",
+    "Created by %1$Kenzap%2$. ❤️ Licensed %3$GPL3%4$.": "Creado por %1$Kenzap%2$. ❤️ Con licencia %3$GPL3%4$.",
+    "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "Copyright © %1$ %2$ Kenzap%3$. Reservados todos los derechos.",
+    "Kenzap Cloud Services - Dashboard": "Servicios en la nube de Kenzap - Panel de control",
+    "Product placeholder": "Producto marcador de posición",
+    "Edit product": "Editar producto",
     "Completely remove this order?": "¿Eliminar completamente este pedido?",
+    "Loading..": "Cargando..",
+    "Order created": "Pedido creado",
     "Order updated": "Pedido actualizado",
+    "No orders to display.": "No hay pedidos para mostrar.",
     "Product List": "Lista de productos",
     "Product Edit": "Producto Editar",
     "Remove entire block?": "¿Eliminar todo el bloque?",
@@ -121,19 +188,14 @@
     "Please provide image less than 5 MB in size!": "Proporcione una imagen de menos de 5 MB de tamaño.",
     "+ add option": "+ añadir opción",
     ", differentiate price and product options.": ", diferenciar precio y opciones de producto.",
-    "Remove": "Remover",
-    "Last change": "Ultimo cambio",
-    "No products to display.": "No hay productos para mostrar.",
-    "Product placeholder": "Producto marcador de posición",
-    "Edit product": "Editar producto",
-    "Remove this product": "Quitar este producto",
-    "Product list": "Lista de productos",
+    "Product updated": "Producto actualizado",
     "Search products": "Buscar Productos",
     "Completely remove this product?": "¿Eliminar completamente este producto?",
     "Add Product": "Agregar producto",
     "Short description": "Breve descripción",
-    "Settings": "Ajustes",
-    "Choose currency": "Elegir Moneda",
-    "Successfully updated": "Actualizado exitosamente"
+    "Last change": "Ultimo cambio",
+    "No products to display.": "No hay productos para mostrar.",
+    "Remove this product": "Quitar este producto",
+    "Choose currency": "Elegir Moneda"
   }
 }
