--- a/public/locales/lv.json
+++ b/public/locales/lv.json
@@ -1,12 +1,23 @@
 {
   "language": "noklusējuma",
   "texts": {
+    "Sales report": "Pārdošanas atskaite",
+    "Top products": "Top produkti",
+    "Customers": "Klienti",
+    "Custom": "Pielāgots",
+    "Product list": "Produktu saraksts",
+    "Orders": "Pasūtījumi",
+    "Settings": "Iestatījumi",
+    "Analytics": "Analytics",
+    "New order": "Jauns pasūtījums",
     "All": "Visi",
     "New": "Jauns",
+    "Paid": "Apmaksāts",
     "Processing": "Apstrāde",
     "Completed": "Pabeigts",
     "Canceled": "Atcelts",
     "Failed": "Neizdevās",
+    "Refunded": "Atmaksāts",
     "Search order": "Meklēšanas secība",
     "From": "No",
     "Status": "Statuss",
@@ -30,11 +41,10 @@
     "Add product": "Pievienojiet produktu",
     "Save changes": "Saglabāt izmaiņas",
     "Notifications": "Paziņojumi",
-    "Currency": "Valūta",
+    "Currency &amp; Tax": "Valūta &amp; Nodoklis",
     "Payout": "Izmaksa",
-    "Tax": "Nodoklis",
+    "Legal": "Juridisks",
     "Notification settings": "Paziņojumu iestatījumi",
-    "New order": "Jauns pasūtījums",
     "None": "Nav",
     "Client": "Klients",
     "Administrator": "Administrators",
@@ -44,12 +54,26 @@
     "Processing order": "Pasūtījuma apstrāde",
     "Refunded order": "Atmaksāts pasūtījums",
     "Currency settings": "Valūtas iestatījumi",
+    "Currency": "Valūta",
     "Currency symbol": "Valūtas simbols",
     "Currency position": "Valūtas pozīcija",
     "Left": "Pa kreisi",
     "Right": "Pa labi",
     "Left with space": "Atlicis ar vietu",
     "Right with space": "Tieši ar telpu",
+    "Tax": "Nodoklis",
+    "Calculate": "Aprēķināt",
+    "Enable tax calculations when processing orders.": "Pasūtījumu apstrādes laikā iespējot nodokļu aprēķinus.",
+    "Geolocation": "Ģeolokācija",
+    "Auto tax rate": "Auto nodokļa likme",
+    "Automatically detect tax rate whenever applicable.": "Automātiski noteikt nodokļu likmi, kad vien piemērojams.",
+    "Rate": "Likme",
+    "Default tax rate. Example, 9 or 21. Use numeric value.": "Noklusējuma nodokļa likme. Piemērs, 9 vai 21. Izmantojiet skaitlisko vērtību.",
+    "Display": "Displejs",
+    "Tax title. Example, VAT or GST.": "Nodokļa nosaukums. Piemēram, PVN vai GST.",
+    "Invoice and receipts": "Rēķins un kvītis",
+    "Receipts": "Kvītis",
+    "Invoice receipt design for printers.": "Rēķinu čeku dizains printeriem.",
     "Your tax informatio": "Jūsu nodokļu informācija",
     "Invoice info (this information will be not revealed public)": "Informācija par rēķinu (šī informācija netiks atklāta)",
     "Tax ID": "Nodokļu ID",
@@ -73,7 +97,6 @@
     "Bank name": "bankas nosaukums",
     "Bank branch city": "Bankas filiāles pilsēta",
     "Bank branch country": "Bankas filiāles valsts",
-    "Showing %1$ to %2$ of %3$ entries": "Tiek rādīts %1$ līdz %2$ no %3$ ierakstiem",
     "no records to display": "pagaidam nav ierakstu",
     "Unpublished": "Nepublicēts",
     "Drafts": "Melnraksti",
@@ -89,16 +112,60 @@
     "Oct": "Okt",
     "Nov": "Nov",
     "Dec": "Dec",
-    "Dashboard": "Dashboards",
-    "E-commerce": "Ē-komercija",
-    "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "Autortiesības © %1$ %2$ Kenzap%3$. Visas tiesības aizsargātas.",
-    "Kenzap Cloud Services - Dashboard": "Kenzap mākoņpakalpojumi",
-    "No orders to display.": "Nav pasūtījumu, ko parādīt.",
-    "Orders": "Pasūtījumi",
+    "required": "nepieciešams",
+    "Showing %1$ to %2$ of %3$ entries": "Tiek rādīts %1$ līdz %2$ no %3$ ierakstiem",
+    "Create": "Izveidot",
     "Update": "Atjaunināt",
     "Close": "Aizvērt",
+    "Product": "Produkts",
+    "Qty": "Daudzums",
+    "Search..": "Meklēt..",
+    "Add note": "Pievienot piezīmi",
+    "Add variation": "Pievienojiet variāciju",
+    "Adjust price": "Pielāgojiet cenu",
+    "Remove": "Noņemt",
+    "Note": "Piezīme",
+    "Incorrect product data": "Nepareizi produkta dati",
+    "ID": "ID",
+    "Name": "Vārds",
+    "Surname": "Uzvārds",
+    "Bios": "Bios",
+    "Avatar": "Iemiesojums",
+    "Post": "Post",
+    "Whatsapp": "Whatsapp",
+    "Messenger": "Messenger",
+    "Line": "Līnija",
+    "Telegram": "Telegramma",
+    "Bio": "Bio",
+    "IBAN": "GĀJA",
+    "SWIFT": "SWIFT",
+    "Bank": "Banka",
+    "Bank city": "Bankas pilsēta",
+    "Bank country": "Bankas valsts",
+    "Amount Payable": "Maksājamā summa",
+    "Link 3": "3. saite",
+    "Grade": "Novērtējums",
+    "Kenzap IDA": "Kenzaps IDA",
+    "Printing j": "Drukāšana j",
+    "Dashboard": "Dashboards",
+    "E-commerce": "Ē-komercija",
+    "Today": "Šodien",
+    "day": "diena",
+    "days": "dienas",
+    "Total tax": "Kopējais nodoklis",
+    "Total with tax": "Kopā ar nodokli",
+    "No data to display": "Nav datu, ko parādīt",
+    "Totals": "Kopsummas",
+    "Created by %1$Kenzap%2$. ❤️ Licensed %3$GPL3%4$.": "Izveidoja %1$Kenzap%2$. ❤️ Licencēts %3$GPL3%4$.",
+    "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "Autortiesības © %1$ %2$ Kenzap%3$. Visas tiesības aizsargātas.",
+    "Kenzap Cloud Services - Dashboard": "Kenzap mākoņpakalpojumi",
+    "Product placeholder": "Produkta vietturis",
+    "Edit product": "Rediģēt produktu",
     "Completely remove this order?": "Vai pilnībā noņemt šo pasūtījumu?",
+    "Loading..": "Notiek ielāde...",
+    "Order created": "Pasūtījums izveidots",
     "Order updated": "Pasūtījums atjaunināts",
+    "No orders to display.": "Nav pasūtījumu, ko parādīt.",
     "Product List": "Produktu saraksts",
     "Product Edit": "Produkta rediģēšana",
     "Remove entire block?": "Vai noņemt visu bloku?",
@@ -121,19 +188,14 @@
     "Please provide image less than 5 MB in size!": "Lūdzu, norādiet attēlu, kura izmērs ir mazāks par 5 MB!",
     "+ add option": "+ pievienošanas opcija",
     ", differentiate price and product options.": ", diferencēt cenas un preču iespējas.",
-    "Remove": "Noņemt",
-    "Last change": "Pēdējā maiņa",
-    "No products to display.": "Nav produktu, ko parādīt.",
-    "Product placeholder": "Produkta vietturis",
-    "Edit product": "Rediģēt produktu",
-    "Remove this product": "Noņemiet šo produktu",
-    "Product list": "Produktu saraksts",
+    "Product updated": "Produkts atjaunināts",
     "Search products": "Meklēt produktus",
     "Completely remove this product?": "Vai pilnībā noņemt šo produktu?",
     "Add Product": "Pievienot produktu",
     "Short description": "Īss apraksts",
-    "Settings": "Iestatījumi",
-    "Choose currency": "Izvēlieties valūtu",
-    "Successfully updated": "Veiksmīgi atjaunināts"
+    "Last change": "Pēdējā maiņa",
+    "No products to display.": "Nav produktu, ko parādīt.",
+    "Remove this product": "Noņemiet šo produktu",
+    "Choose currency": "Izvēlieties valūtu"
   }
 }
