--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -1,15 +1,26 @@
 {
   "language": "默认",
   "texts": {
+    "Sales report": "销售报告",
+    "Top products": "顶级产品",
+    "Customers": "顾客",
+    "Custom": "风俗",
+    "Product list": "产品列表",
+    "Orders": "订单",
+    "Settings": "设置",
+    "Analytics": "分析",
+    "New order": "新订单",
     "All": "全部",
     "New": "新的",
-    "Processing": "加工",
-    "Completed": "完全的",
+    "Paid": "有薪酬的",
+    "Processing": "处理中",
+    "Completed": "完毕",
     "Canceled": "取消",
-    "Failed": "失败的",
+    "Failed": "失败",
+    "Refunded": "已退款",
     "Search order": "搜索顺序",
     "From": "从",
-    "Status": "地位",
+    "Status": "状态",
     "Total": "全部的",
     "Time": "时间",
     "Description": "描述",
@@ -30,26 +41,39 @@
     "Add product": "添加产品",
     "Save changes": "保存更改",
     "Notifications": "通知",
-    "Currency": "货币",
+    "Currency &amp; Tax": "货币与税",
     "Payout": "支付",
-    "Tax": "税",
+    "Legal": "合法的",
     "Notification settings": "通知设置",
-    "New order": "新命令",
-    "None": "没有任何",
-    "Client": "客户",
+    "None": "无",
+    "Client": "顾客",
     "Administrator": "行政人员",
-    "Client and administrator": "客户和管理员",
+    "Client and administrator": "顾客和管理员",
     "Admin emails": "管理员电子邮件",
     "Cancelled order": "取消订单",
     "Processing order": "处理订单",
     "Refunded order": "退款订单",
     "Currency settings": "货币设置",
+    "Currency": "货币",
     "Currency symbol": "货币符号",
-    "Currency position": "货币头寸",
+    "Currency position": "货币状态",
     "Left": "剩下",
     "Right": "对",
     "Left with space": "留有空间",
     "Right with space": "右边有空格",
+    "Tax": "税",
+    "Calculate": "计算",
+    "Enable tax calculations when processing orders.": "处理订单时启用税收计算。",
+    "Geolocation": "地理位置",
+    "Auto tax rate": "汽车税率",
+    "Automatically detect tax rate whenever applicable.": "适用时自动检测税率。",
+    "Rate": "速度",
+    "Default tax rate. Example, 9 or 21. Use numeric value.": "默认税率。例如，9 或 21。使用数值。",
+    "Display": "展示",
+    "Tax title. Example, VAT or GST.": "税名。例如，增值税或消费税。",
+    "Invoice and receipts": "发票和收据",
+    "Receipts": "收据",
+    "Invoice receipt design for printers.": "打印机发票收据设计。",
     "Your tax informatio": "您的税务信息",
     "Invoice info (this information will be not revealed public)": "发票信息（此信息不会公开）",
     "Tax ID": "税号",
@@ -60,7 +84,7 @@
     "Business": "商业",
     "Address": "地址",
     "Address 1": "地址1",
-    "State": "状态",
+    "State": "地区",
     "Address 2": "地址2",
     "Postcode": "邮政编码",
     "City": "城市",
@@ -73,32 +97,75 @@
     "Bank name": "银行名称",
     "Bank branch city": "银行分行城市",
     "Bank branch country": "银行分行国家",
-    "Showing %1$ to %2$ of %3$ entries": "显示 %1$ 到 %2$ 个条目，共 %3$ 个条目",
     "no records to display": "无记录可显示",
     "Unpublished": "未发表",
     "Drafts": "草稿",
-    "Jan": "简",
+    "Jan": "一月",
     "Feb": "二月",
-    "Mar": "海",
+    "Mar": "三月",
     "Apr": "四月",
-    "May": "可能",
-    "Jun": "Jun",
+    "May": "五月",
+    "Jun": "六月",
     "Jul": "七月",
     "Aug": "八月",
     "Sep": "九月",
     "Oct": "十月",
     "Nov": "十一月",
     "Dec": "十二月",
-    "Dashboard": "仪表盘",
-    "E-commerce": "电子商务",
-    "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "版权所有 © %1$ %2$ Kenzap%3$。版权所有。",
-    "Kenzap Cloud Services - Dashboard": "Kenzap 云服务 - 仪表板",
-    "No orders to display.": "没有可显示的订单。",
-    "Orders": "订单",
+    "required": "必需的",
+    "Showing %1$ to %2$ of %3$ entries": "显示 %1$ 到 %2$ 个条目，共 %3$ 个条目",
+    "Create": "创造",
     "Update": "更新",
     "Close": "关闭",
+    "Product": "产品",
+    "Qty": "数量",
+    "Search..": "搜索..",
+    "Add note": "添加备注",
+    "Add variation": "添加变体",
+    "Adjust price": "调整价格",
+    "Remove": "删除",
+    "Note": "笔记",
+    "Incorrect product data": "产品数据不正确",
+    "ID": "ID",
+    "Name": "姓名",
+    "Surname": "姓",
+    "Bios": "BIOS",
+    "Avatar": "阿凡达",
+    "Post": "邮政",
+    "Whatsapp": "Whatsapp",
+    "Messenger": "信使",
+    "Line": "线",
+    "Telegram": "电报",
+    "Bio": "生物",
+    "IBAN": "本来打算",
+    "SWIFT": "迅速",
+    "Bank": "银行",
+    "Bank city": "银行城",
+    "Bank country": "银行国家",
+    "Amount Payable": "应付金额",
+    "Link 3": "链接 3",
+    "Grade": "年级",
+    "Kenzap IDA": "肯扎普 IDA",
+    "Printing j": "印刷 j",
+    "Dashboard": "仪表盘",
+    "E-commerce": "电子商务",
+    "Today": "今天",
+    "day": "天",
+    "days": "天",
+    "Total tax": "总税额",
+    "Total with tax": "含税总额",
+    "No data to display": "没有数据显示",
+    "Totals": "总计",
+    "Created by %1$Kenzap%2$. ❤️ Licensed %3$GPL3%4$.": "由 %1$Kenzap%2$ 创建。 ❤️ 获得许可 %3$GPL3%4$。",
+    "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "版权所有 © %1$ %2$ Kenzap%3$。版权所有。",
+    "Kenzap Cloud Services - Dashboard": "Kenzap 云服务 - 仪表板",
+    "Product placeholder": "产品占位框",
+    "Edit product": "编辑产品",
     "Completely remove this order?": "完全删除此订单？",
+    "Loading..": "加载中..",
+    "Order created": "已创建订单",
     "Order updated": "订单已更新",
+    "No orders to display.": "没有可显示的订单。",
     "Product List": "产品列表",
     "Product Edit": "产品编辑",
     "Remove entire block?": "移除整个区块？",
@@ -121,19 +188,14 @@
     "Please provide image less than 5 MB in size!": "请提供小于 5 MB 的图片！",
     "+ add option": "+ 添加选项",
     ", differentiate price and product options.": "，区分价格和产品选项。",
-    "Remove": "消除",
-    "Last change": "最后一次变更",
-    "No products to display.": "没有可展示的产品。",
-    "Product placeholder": "产品占位符",
-    "Edit product": "编辑产品",
-    "Remove this product": "删除此产品",
-    "Product list": "产品列表",
+    "Product updated": "产品更新",
     "Search products": "搜索产品",
     "Completely remove this product?": "完全删除此产品？",
     "Add Product": "添加产品",
     "Short description": "简短的介绍",
-    "Settings": "设置",
-    "Choose currency": "选择货币",
-    "Successfully updated": "成功更新"
+    "Last change": "最后一次变更",
+    "No products to display.": "没有可展示的产品。",
+    "Remove this product": "删除此产品",
+    "Choose currency": "选择货币"
   }
 }
