--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -1,12 +1,23 @@
 {
   "language": "bawaan",
   "texts": {
+    "Sales report": "Laporan penjualan",
+    "Top products": "Produk teratas",
+    "Customers": "pelanggan",
+    "Custom": "Kebiasaan",
+    "Product list": "Daftar Produk",
+    "Orders": "Pesanan",
+    "Settings": "Pengaturan",
+    "Analytics": "Analitik",
+    "New order": "Pesanan baru",
     "All": "Semua",
     "New": "Baru",
+    "Paid": "Dibayar",
     "Processing": "Pengolahan",
     "Completed": "Lengkap",
     "Canceled": "Dibatalkan",
     "Failed": "Gagal",
+    "Refunded": "Dikembalikan",
     "Search order": "Cari pesanan",
     "From": "Dari",
     "Status": "Status",
@@ -30,11 +41,10 @@
     "Add product": "Tambahkan produk",
     "Save changes": "Simpan perubahan",
     "Notifications": "Notifikasi",
-    "Currency": "Mata uang",
+    "Currency &amp; Tax": "Mata uang &amp; Pajak",
     "Payout": "Pembayaran",
-    "Tax": "Pajak",
+    "Legal": "Hukum",
     "Notification settings": "Pengaturan pemberitahuan",
-    "New order": "Pesanan baru",
     "None": "Tidak ada",
     "Client": "Klien",
     "Administrator": "Administrator",
@@ -44,12 +54,26 @@
     "Processing order": "Memproses pesanan",
     "Refunded order": "Pesanan yang dikembalikan dananya",
     "Currency settings": "Pengaturan mata uang",
+    "Currency": "Mata uang",
     "Currency symbol": "Simbol mata uang",
     "Currency position": "Posisi mata uang",
     "Left": "Kiri",
     "Right": "Benar",
     "Left with space": "Ditinggalkan dengan ruang",
     "Right with space": "Benar dengan ruang",
+    "Tax": "Pajak",
+    "Calculate": "Menghitung",
+    "Enable tax calculations when processing orders.": "Aktifkan penghitungan pajak saat memproses pesanan.",
+    "Geolocation": "Geolokasi",
+    "Auto tax rate": "Tarif pajak otomatis",
+    "Automatically detect tax rate whenever applicable.": "Secara otomatis mendeteksi tarif pajak kapan pun berlaku.",
+    "Rate": "Kecepatan",
+    "Default tax rate. Example, 9 or 21. Use numeric value.": "Tarif pajak default. Contoh, 9 atau 21. Gunakan nilai numerik.",
+    "Display": "Menampilkan",
+    "Tax title. Example, VAT or GST.": "Judul pajak. Contoh, PPN atau GST.",
+    "Invoice and receipts": "Faktur dan tanda terima",
+    "Receipts": "tanda terima",
+    "Invoice receipt design for printers.": "Desain tanda terima faktur untuk printer.",
     "Your tax informatio": "Informasi pajak Anda",
     "Invoice info (this information will be not revealed public)": "Info faktur (informasi ini tidak akan diungkapkan kepada publik)",
     "Tax ID": "Id pajak",
@@ -73,7 +97,6 @@
     "Bank name": "nama Bank",
     "Bank branch city": "kota cabang bank",
     "Bank branch country": "negara cabang bank",
-    "Showing %1$ to %2$ of %3$ entries": "Menampilkan %1$ hingga %2$ dari %3$ entri",
     "no records to display": "Tidak ada catatan untuk ditampilkan",
     "Unpublished": "Tidak diterbitkan",
     "Drafts": "draf",
@@ -89,16 +112,60 @@
     "Oct": "Oktober",
     "Nov": "November",
     "Dec": "Desember",
-    "Dashboard": "Dasbor",
-    "E-commerce": "Perdagangan elektronik",
-    "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "Hak Cipta © %1$ %2$ Kenzap%3$. Seluruh hak cipta.",
-    "Kenzap Cloud Services - Dashboard": "Layanan Cloud Kenzap - Dasbor",
-    "No orders to display.": "Tidak ada perintah untuk ditampilkan.",
-    "Orders": "Pesanan",
+    "required": "diperlukan",
+    "Showing %1$ to %2$ of %3$ entries": "Menampilkan %1$ hingga %2$ dari %3$ entri",
+    "Create": "Membuat",
     "Update": "Memperbarui",
     "Close": "Menutup",
+    "Product": "Produk",
+    "Qty": "jumlah",
+    "Search..": "Mencari..",
+    "Add note": "Menambahkan catatan",
+    "Add variation": "Tambahkan variasi",
+    "Adjust price": "Sesuaikan harga",
+    "Remove": "Menghapus",
+    "Note": "Catatan",
+    "Incorrect product data": "Data produk salah",
+    "ID": "PENGENAL",
+    "Name": "Nama",
+    "Surname": "Nama belakang",
+    "Bios": "bios",
+    "Avatar": "Avatar",
+    "Post": "Pos",
+    "Whatsapp": "ada apa",
+    "Messenger": "Kurir",
+    "Line": "Garis",
+    "Telegram": "Telegram",
+    "Bio": "bio",
+    "IBAN": "AKAN",
+    "SWIFT": "CEPAT",
+    "Bank": "Bank",
+    "Bank city": "kota bank",
+    "Bank country": "negara bank",
+    "Amount Payable": "Jumlah yang harus dibayar",
+    "Link 3": "tautan 3",
+    "Grade": "Nilai",
+    "Kenzap IDA": "Kenzap IDA",
+    "Printing j": "Mencetak j",
+    "Dashboard": "Dasbor",
+    "E-commerce": "Perdagangan elektronik",
+    "Today": "Hari ini",
+    "day": "hari",
+    "days": "hari",
+    "Total tax": "Total pajak",
+    "Total with tax": "Total dengan pajak",
+    "No data to display": "tidak ada data untuk ditampilkan",
+    "Totals": "Total",
+    "Created by %1$Kenzap%2$. ❤️ Licensed %3$GPL3%4$.": "Dibuat oleh %1$Kenzap%2$. ❤️ Berlisensi %3$GPL3%4$.",
+    "Copyright © %1$ %2$ Kenzap%3$. All rights reserved.": "Hak Cipta © %1$ %2$ Kenzap%3$. Seluruh hak cipta.",
+    "Kenzap Cloud Services - Dashboard": "Layanan Cloud Kenzap - Dasbor",
+    "Product placeholder": "Tempat penampung produk",
+    "Edit product": "Sunting produk",
     "Completely remove this order?": "Hapus pesanan ini sepenuhnya?",
+    "Loading..": "Memuat..",
+    "Order created": "Pesanan dibuat",
     "Order updated": "Pesanan diperbarui",
+    "No orders to display.": "Tidak ada perintah untuk ditampilkan.",
     "Product List": "Daftar Produk",
     "Product Edit": "Pengeditan Produk",
     "Remove entire block?": "Hapus seluruh blok?",
@@ -121,19 +188,14 @@
     "Please provide image less than 5 MB in size!": "Harap berikan gambar berukuran kurang dari 5 MB!",
     "+ add option": "+ tambahkan opsi",
     ", differentiate price and product options.": ", membedakan harga dan pilihan produk.",
-    "Remove": "Menghapus",
-    "Last change": "Perubahan terakhir",
-    "No products to display.": "Tidak ada produk untuk ditampilkan.",
-    "Product placeholder": "Tempat penampung produk",
-    "Edit product": "Sunting produk",
-    "Remove this product": "Hapus produk ini",
-    "Product list": "Daftar Produk",
+    "Product updated": "Produk diperbarui",
     "Search products": "Cari produk",
     "Completely remove this product?": "Hapus produk ini sepenuhnya?",
     "Add Product": "Tambahkan Produk",
     "Short description": "Deskripsi Singkat",
-    "Settings": "Pengaturan",
-    "Choose currency": "Pilih mata uang",
-    "Successfully updated": "Berhasil diperbaharui"
+    "Last change": "Perubahan terakhir",
+    "No products to display.": "Tidak ada produk untuk ditampilkan.",
+    "Remove this product": "Hapus produk ini",
+    "Choose currency": "Pilih mata uang"
   }
 }
