adding missing translation strings

--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -37,6 +37,7 @@
     "General": "General",
     "Published": "Publicado",
     "Draft": "Sequía",
+    "Categories": "Categorías",
     "Save": "Guardar",
     "Add product": "Agregar producto",
     "Save changes": "Guardar cambios",
@@ -147,6 +148,7 @@
     "Grade": "Grado",
     "Kenzap IDA": "AIF de Kenzap",
     "Printing j": "Impresión j",
+    "new category": "nueva categoría",
     "Dashboard": "Panel",
     "E-commerce": "comercio electrónico",
     "Today": "Hoy dia",
