--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -37,6 +37,7 @@
     "General": "一般的",
     "Published": "发表",
     "Draft": "草案",
+    "Categories": "类别",
     "Save": "节省",
     "Add product": "添加产品",
     "Save changes": "保存更改",
@@ -147,6 +148,7 @@
     "Grade": "年级",
     "Kenzap IDA": "肯扎普 IDA",
     "Printing j": "印刷 j",
+    "new category": "新类别",
     "Dashboard": "仪表盘",
     "E-commerce": "电子商务",
     "Today": "今天",
