--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -37,6 +37,7 @@
     "General": "Umum",
     "Published": "Diterbitkan",
     "Draft": "Draf",
+    "Categories": "Kategori",
     "Save": "Menyimpan",
     "Add product": "Tambahkan produk",
     "Save changes": "Simpan perubahan",
@@ -147,6 +148,7 @@
     "Grade": "Nilai",
     "Kenzap IDA": "Kenzap IDA",
     "Printing j": "Mencetak j",
+    "new category": "kategori baru",
     "Dashboard": "Dasbor",
     "E-commerce": "Perdagangan elektronik",
     "Today": "Hari ini",
