--- a/src/locales/lv.json
+++ b/src/locales/lv.json
@@ -37,6 +37,7 @@
     "General": "Ģenerālis",
     "Published": "Publicēts",
     "Draft": "Melnraksts",
+    "Categories": "Kategorijas",
     "Save": "Saglabāt",
     "Add product": "Pievienojiet produktu",
     "Save changes": "Saglabāt izmaiņas",
@@ -147,6 +148,7 @@
     "Grade": "Novērtējums",
     "Kenzap IDA": "Kenzaps IDA",
     "Printing j": "Drukāšana j",
+    "new category": "jauna kategorija",
     "Dashboard": "Dashboards",
     "E-commerce": "Ē-komercija",
     "Today": "Šodien",
