--- a/public/locales/id.json
+++ b/public/locales/id.json
@@ -113,6 +113,9 @@
     "Oct": "Oktober",
     "Nov": "November",
     "Dec": "Desember",
+    "moments ago": "beberapa waktu lalu",
+    " minutes ago": " beberapa menit yang lalu",
+    " hours ago": " beberapa jam yang lalu",
     "required": "diperlukan",
     "Showing %1$ to %2$ of %3$ entries": "Menampilkan %1$ hingga %2$ dari %3$ entri",
     "Create": "Membuat",
