--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -113,6 +113,9 @@
     "Oct": "十月",
     "Nov": "十一月",
     "Dec": "十二月",
+    "moments ago": "片刻前",
+    " minutes ago": " 几分钟前",
+    " hours ago": " 几小时前",
     "required": "必需的",
     "Showing %1$ to %2$ of %3$ entries": "显示 %1$ 到 %2$ 个条目，共 %3$ 个条目",
     "Create": "创造",
