--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -113,6 +113,9 @@
     "Oct": "Oct",
     "Nov": "Nov",
     "Dec": "Dic",
+    "moments ago": "Momentos atrás",
+    " minutes ago": " hace minutos",
+    " hours ago": " horas atras",
     "required": "requerido",
     "Showing %1$ to %2$ of %3$ entries": "Mostrando %1$ a %2$ de %3$ entradas",
     "Create": "Crear",
