--- a/src/locales/lv.json
+++ b/src/locales/lv.json
@@ -113,6 +113,9 @@
     "Oct": "Okt",
     "Nov": "Nov",
     "Dec": "Dec",
+    "moments ago": "pirms mirkļiem",
+    " minutes ago": " pirms minūtēm",
+    " hours ago": " pirms vairākām stundām",
     "required": "nepieciešams",
     "Showing %1$ to %2$ of %3$ entries": "Tiek rādīts %1$ līdz %2$ no %3$ ierakstiem",
     "Create": "Izveidot",
