--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -41,11 +41,12 @@
     "Save": "Guardar",
     "Add product": "Agregar producto",
     "Save changes": "Guardar cambios",
-    "Notifications": "Notificaciones",
     "Currency &amp; Tax": "Moneda y amp; Impuesto",
     "Payout": "Pagar",
     "Legal": "Legal",
-    "Notification settings": "Configuración de las notificaciones",
+    "Order ID": "Solicitar ID",
+    "Define new order ID number.": "Defina el nuevo número de identificación del pedido.",
+    "Notifications": "Notificaciones",
     "None": "Ninguna",
     "Client": "Cliente",
     "Administrator": "Administrador",
@@ -75,7 +76,7 @@
     "Invoice and receipts": "Factura y recibos",
     "Receipts": "Ingresos",
     "Invoice receipt design for printers.": "Diseño de recibo de factura para imprentas.",
-    "Your tax informatio": "Tu información fiscal",
+    "Your tax information": "Tu información fiscal",
     "Invoice info (this information will be not revealed public)": "Información de la factura (esta información no se revelará públicamente)",
     "Tax ID": "Identificación del impuesto",
     "Email": "Correo electrónico",
@@ -92,12 +93,12 @@
     "Country": "País",
     "Payout data": "Datos de pago",
     "This information is used to process your earnings as part of Kenzap Affiliate or Kenzap Designing programs.": "Esta información se utiliza para procesar sus ganancias como parte de los programas Kenzap Affiliate o Kenzap Designing.",
-    "Bank account holder\\": "Titular de la cuenta bancaria\\",
     "IBAN/Account Nr.": "IBAN/número de cuenta",
     "SWIFT Code": "Código SWIFT",
     "Bank name": "Nombre del banco",
     "Bank branch city": "Ciudad sucursal bancaria",
     "Bank branch country": "País de la sucursal bancaria",
+    "Bank account holder's name": "Nombre del propietario de la cuenta bancaria",
     "no records to display": "No hay registros que mostrar",
     "Unpublished": "Inédito",
     "Drafts": "Borradores",
