--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -41,11 +41,12 @@
     "Save": "Menyimpan",
     "Add product": "Tambahkan produk",
     "Save changes": "Simpan perubahan",
-    "Notifications": "Notifikasi",
     "Currency &amp; Tax": "Mata uang &amp; Pajak",
     "Payout": "Pembayaran",
     "Legal": "Hukum",
-    "Notification settings": "Pengaturan pemberitahuan",
+    "Order ID": "Id pemesanan",
+    "Define new order ID number.": "Tentukan nomor ID pesanan baru.",
+    "Notifications": "Notifikasi",
     "None": "Tidak ada",
     "Client": "Klien",
     "Administrator": "Administrator",
@@ -75,7 +76,7 @@
     "Invoice and receipts": "Faktur dan tanda terima",
     "Receipts": "tanda terima",
     "Invoice receipt design for printers.": "Desain tanda terima faktur untuk printer.",
-    "Your tax informatio": "Informasi pajak Anda",
+    "Your tax information": "Informasi pajak Anda",
     "Invoice info (this information will be not revealed public)": "Info faktur (informasi ini tidak akan diungkapkan kepada publik)",
     "Tax ID": "Id pajak",
     "Email": "Surel",
@@ -92,12 +93,12 @@
     "Country": "Negara",
     "Payout data": "Data pembayaran",
     "This information is used to process your earnings as part of Kenzap Affiliate or Kenzap Designing programs.": "Informasi ini digunakan untuk memproses penghasilan Anda sebagai bagian dari program Afiliasi Kenzap atau Desain Kenzap.",
-    "Bank account holder\\": "Pemegang rekening bank\\",
     "IBAN/Account Nr.": "IBAN/Nomor Rekening.",
     "SWIFT Code": "Tukar Kode",
     "Bank name": "nama Bank",
     "Bank branch city": "kota cabang bank",
     "Bank branch country": "negara cabang bank",
+    "Bank account holder's name": "Nama pemegang rekening bank",
     "no records to display": "Tidak ada catatan untuk ditampilkan",
     "Unpublished": "Tidak diterbitkan",
     "Drafts": "draf",
