--- a/src/locales/lv.json
+++ b/src/locales/lv.json
@@ -41,11 +41,12 @@
     "Save": "Saglabāt",
     "Add product": "Pievienojiet produktu",
     "Save changes": "Saglabāt izmaiņas",
-    "Notifications": "Paziņojumi",
     "Currency &amp; Tax": "Valūta &amp; Nodoklis",
     "Payout": "Izmaksa",
     "Legal": "Juridisks",
-    "Notification settings": "Paziņojumu iestatījumi",
+    "Order ID": "Pasūtījuma ID",
+    "Define new order ID number.": "Norādiet jauno pasūtījuma ID numuru.",
+    "Notifications": "Paziņojumi",
     "None": "Nav",
     "Client": "Klients",
     "Administrator": "Administrators",
@@ -75,7 +76,7 @@
     "Invoice and receipts": "Rēķins un kvītis",
     "Receipts": "Kvītis",
     "Invoice receipt design for printers.": "Rēķinu čeku dizains printeriem.",
-    "Your tax informatio": "Jūsu nodokļu informācija",
+    "Your tax information": "Jūsu nodokļu informācija",
     "Invoice info (this information will be not revealed public)": "Informācija par rēķinu (šī informācija netiks atklāta)",
     "Tax ID": "Nodokļu ID",
     "Email": "E-pasts",
@@ -92,12 +93,12 @@
     "Country": "Valsts",
     "Payout data": "Izmaksu dati",
     "This information is used to process your earnings as part of Kenzap Affiliate or Kenzap Designing programs.": "Šī informācija tiek izmantota, lai apstrādātu jūsu ieņēmumus Kenzap Affiliate vai Kenzap Designing programmu ietvaros.",
-    "Bank account holder\\": "bankas konta īpašnieks\\",
     "IBAN/Account Nr.": "IBAN/Konta Nr.",
     "SWIFT Code": "SWIFT kods",
     "Bank name": "bankas nosaukums",
     "Bank branch city": "Bankas filiāles pilsēta",
     "Bank branch country": "Bankas filiāles valsts",
+    "Bank account holder's name": "Bankas konta turētāja vārds",
     "no records to display": "pagaidam nav ierakstu",
     "Unpublished": "Nepublicēts",
     "Drafts": "Melnraksti",
