--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -12,7 +12,7 @@
     "New order": "新订单",
     "All": "全部",
     "New": "新的",
-    "Paid": "有薪酬的",
+    "Paid": "已付款",
     "Processing": "处理中",
     "Completed": "完毕",
     "Canceled": "取消",
@@ -21,7 +21,7 @@
     "Search order": "搜索顺序",
     "From": "从",
     "Status": "状态",
-    "Total": "全部的",
+    "Total": "小计",
     "Time": "时间",
     "Description": "描述",
     "Title": "标题",
@@ -38,14 +38,15 @@
     "Published": "发表",
     "Draft": "草案",
     "Categories": "类别",
-    "Save": "节省",
+    "Save": "保存",
     "Add product": "添加产品",
     "Save changes": "保存更改",
-    "Notifications": "通知",
     "Currency &amp; Tax": "货币与税",
     "Payout": "支付",
     "Legal": "合法的",
-    "Notification settings": "通知设置",
+    "Order ID": "订单编号",
+    "Define new order ID number.": "定义新的订单 ID 号。",
+    "Notifications": "通知",
     "None": "无",
     "Client": "顾客",
     "Administrator": "行政人员",
@@ -57,25 +58,25 @@
     "Currency settings": "货币设置",
     "Currency": "货币",
     "Currency symbol": "货币符号",
-    "Currency position": "货币状态",
-    "Left": "剩下",
-    "Right": "对",
-    "Left with space": "留有空间",
-    "Right with space": "右边有空格",
+    "Currency position": "符号位置",
+    "Left": "左边",
+    "Right": "右边",
+    "Left with space": "左边留空格",
+    "Right with space": "右边留空格",
     "Tax": "税",
     "Calculate": "计算",
     "Enable tax calculations when processing orders.": "处理订单时启用税收计算。",
     "Geolocation": "地理位置",
-    "Auto tax rate": "汽车税率",
+    "Auto tax rate": "自动税率",
     "Automatically detect tax rate whenever applicable.": "适用时自动检测税率。",
-    "Rate": "速度",
+    "Rate": "税率",
     "Default tax rate. Example, 9 or 21. Use numeric value.": "默认税率。例如，9 或 21。使用数值。",
-    "Display": "展示",
+    "Display": "展示名称",
     "Tax title. Example, VAT or GST.": "税名。例如，增值税或消费税。",
     "Invoice and receipts": "发票和收据",
     "Receipts": "收据",
     "Invoice receipt design for printers.": "打印机发票收据设计。",
-    "Your tax informatio": "您的税务信息",
+    "Your tax information": "您的税务信息",
     "Invoice info (this information will be not revealed public)": "发票信息（此信息不会公开）",
     "Tax ID": "税号",
     "Email": "电子邮件",
@@ -92,12 +93,12 @@
     "Country": "国家",
     "Payout data": "支付数据",
     "This information is used to process your earnings as part of Kenzap Affiliate or Kenzap Designing programs.": "此信息用于处理您的收入，作为 Kenzap 附属公司或 Kenzap 设计计划的一部分。",
-    "Bank account holder\\": "银行账户持有人\\",
     "IBAN/Account Nr.": "IBAN/帐号",
     "SWIFT Code": "SWIFT代码",
     "Bank name": "银行名称",
     "Bank branch city": "银行分行城市",
     "Bank branch country": "银行分行国家",
+    "Bank account holder's name": "银行账户持有人\\",
     "no records to display": "无记录可显示",
     "Unpublished": "未发表",
     "Drafts": "草稿",
@@ -114,8 +115,8 @@
     "Nov": "十一月",
     "Dec": "十二月",
     "moments ago": "片刻前",
-    " minutes ago": " 几分钟前",
-    " hours ago": " 几小时前",
+    " minutes ago": " 分钟前",
+    " hours ago": " 小时前",
     "required": "必需的",
     "Showing %1$ to %2$ of %3$ entries": "显示 %1$ 到 %2$ 个条目，共 %3$ 个条目",
     "Create": "创造",
@@ -158,7 +159,7 @@
     "day": "天",
     "days": "天",
     "Total tax": "总税额",
-    "Total with tax": "含税总额",
+    "Total with tax": "总金额",
     "No data to display": "没有数据显示",
     "Totals": "总计",
     "Created by %1$Kenzap%2$. ❤️ Licensed %3$GPL3%4$.": "由 %1$Kenzap%2$ 创建。 ❤️ 获得许可 %3$GPL3%4$。",
